--- a/dasmoto.html
+++ b/dasmoto.html
@@ -7,5 +7,24 @@
 </head>
 <body>
     
+    <h1>Dasmoto's Arts & Crafts</h1>
+    
+    <h3>Brushed</h3>
+    <img src="" alt="">
+    <h5>Hacksaw Brushes</h5>
+    <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. Starting at $3.00 / brush.</p>
+
+    <h3>Frames</h3>
+    <img src="" alt="">
+    <h5>Art Frames (assorted)</h5>
+    <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. Starting at $2.00 / frame.</p>
+   
+   
+    <h3>Paint</h3>
+    <img src="" alt="">
+    <h5>Clean Finnish Paint</h5>
+    <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. Starting at $5.00 / tube.</p>
+
+
 </body>
 </html>
