with first picture

--- a/dasmoto.html
+++ b/dasmoto.html
@@ -10,7 +10,7 @@
     <h1>Dasmoto's Arts & Crafts</h1>
     
     <h3>Brushed</h3>
-    <img src="" alt="">
+    <img src="images/brushes.jpg" alt="">
     <h5>Hacksaw Brushes</h5>
     <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. Starting at $3.00 / brush.</p>
 
