--- a/dasmoto.html
+++ b/dasmoto.html
@@ -9,21 +9,21 @@
     
     <h1>Dasmoto's Arts & Crafts</h1>
     
-    <h3>Brushed</h3>
+    <h2>Brushed</h2>
     <img src="images/brushes.jpg" alt="">
-    <h5>Hacksaw Brushes</h5>
-    <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. Starting at $3.00 / brush.</p>
+    <h4>Hacksaw Brushes</h4>
+    <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes.<span class="price">Starting at $3.00 / brush.</span> </p>
 
-    <h3>Frames</h3>
-    <img src="" alt="">
-    <h5>Art Frames (assorted)</h5>
-    <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. Starting at $2.00 / frame.</p>
+    <h3 class="frames">Frames</h3>
+    <img src="images/frames.jpg" alt="">
+    <h4>Art Frames (assorted)</h4>
+    <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span class="price">Starting at $2.00 / frame.</span></p>
    
    
     <h3>Paint</h3>
-    <img src="" alt="">
-    <h5>Clean Finnish Paint</h5>
-    <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. Starting at $5.00 / tube.</p>
+    <img src="images/finish.jpg" alt="">
+    <h4>Clean Finnish Paint</h4>
+    <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.<span class="price">Starting at $5.00 / tube.</span> </p>
 
 
 </body>
